fix: wrap images in containers to prevent dithered borders
- Add rehype plugin to wrap markdown images in span.image-frame
- Create ImageFrame component for consistent image border styling
- Move borders from img elements to wrapper containers so dither
  filter doesn't affect borders
- Fix Gallery component flex layout to show 3 images per row
- Add spacing under gallery captions

--- a/korczak-xyz/src/styles/blog-post.css
+++ b/korczak-xyz/src/styles/blog-post.css
@@ -43,14 +43,35 @@
     color: var(--retro-yellow);
 }
 
-.blog_post img {
+/* Image wrapper from rehype plugin - border on wrapper to avoid dither filter */
+/* Use span.image-frame to target only markdown images wrapped by rehype plugin */
+/* div.image-frame from Gallery component should NOT have width: fit-content */
+.blog_post span.image-frame {
+    display: block;
+    width: fit-content;
     border: 3px inset var(--retro-dark-gray);
     margin: 20px 0;
 }
 
+.blog_post span.image-frame img {
+    display: block;
+    border: none;
+}
+
+.blog_post img {
+    border: none;
+}
+
 .blog_post .gatsby-resp-image-wrapper,
 .blog_post .astro-image {
+    display: inline-block;
+    border: 3px inset var(--retro-dark-gray);
     margin: 30px 0;
+}
+
+.blog_post .gatsby-resp-image-wrapper img,
+.blog_post .astro-image img {
+    border: none;
 }
 
 .blog_post .embedVideo-container {
